[package]
name = "upward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.17.0"
serde = "1.0.136"
tokio = { version = "1.17.0", features = ["full"] }
thiserror = "1.0.30"
dotenvy = "0.15.1"
reqwest = "0.11.10"
serde_json = "1.0.79"