[package]
name = "upward"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23"
tui = { version = "0.17.0", features = ["crossterm"] }
serde = { version = "1.0.136", features = ["derive"] }
time = { version = "0.3.9", features = ["formatting", "parsing"] }
tokio = { version = "1.17.0", features = ["full"] }
thiserror = "1.0.30"
dotenvy = "0.15.1"
reqwest = { version = "0.11.10", features = ["json"] }
serde_json = "1.0.79"
csv = "1.1.6"